# GeometronLib

./: .gitignore  .gitmodules  CMakeLists.txt  FindGeometronLib.cmake  README.md
cmake/: FindGaussianLib.cmake
include/Geom/: AABB.h  AABBCollision.h  BernsteinPolynomial.h  BezierCurve.h  BezierPatch.h  BezierTriangle.h  Cone.h  ConeCollision.h  Config.h  ConvexHull.h  Frustum.h  Geom.h  KeyframeSequence.h  Line.h  LineCollision.h  Macros.h  Mesh.h  MeshGenerator.h  MeshModifier.h  OBB.h  Plane.h  PlaneCollision.h  Playback.h  Projection.h  Ray.h  RayCollision.h  Skeleton.h  SkeletonJoint.h  Sphere.h  SphereCollision.h  Spline.h  TangentSpace.h  Transform2.h  Transform3.h  Triangle.h  TriangleCollision.h  TriangleMesh.h  UniformSpline.h  VectorizedAABB.h
sources/: Except.h  KeyframeSequence.cpp  Mesh.cpp  MeshGeneratorBezierPatch.cpp  MeshGeneratorCapsule.cpp  MeshGeneratorCone.cpp  MeshGeneratorCuboid.cpp  MeshGeneratorCurve.cpp  MeshGeneratorCylinder.cpp  MeshGeneratorDetails.cpp  MeshGeneratorDetails.h  MeshGeneratorEllipsoid.cpp  MeshGeneratorPie.cpp  MeshGeneratorPipe.cpp  MeshGeneratorSpiral.cpp  MeshGeneratorTorus.cpp  MeshGeneratorTorusKnot.cpp  MeshModifier.cpp  Playback.cpp  Skeleton.cpp  SkeletonJoint.cpp  TriangleMesh.cpp
test/: Test1_Primitives.cpp  Test2_Mesh.cpp  Test3_MeshGen.cpp  Test4_Anim.cpp  Test5_Skeleton.cpp  Test6_Collision.cpp  Test7_RayCast.cpp  Test8_Vectorization.cpp  TestHelper.h  compile-gcc.bat  test1.cpp  test2.cpp
